--- a/ilona/pom.xml
+++ b/ilona/pom.xml
@@ -49,7 +49,25 @@
 			<artifactId>measurement-service-impl</artifactId>
 			<version>0.1.2-SNAPSHOT</version>
 		</dependency>
+		
+		<dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-web</artifactId>
+        <version>4.1.0.BUILD-SNAPSHOT</version>
+    </dependency>
 	</dependencies>
+	
+	<repositories>
+    <repository>
+        <id>spring-snapshots</id>
+        <name>Spring Snapshots</name>
+        <url>https://repo.spring.io/libs-snapshot</url>
+        <snapshots>
+            <enabled>true</enabled>
+        </snapshots>
+    </repository>
+	</repositories>
+	
 	<build>
 		<finalName>ilona</finalName>
 	</build>
