--- a/ilona/src/main/webapp/WEB-INF/web.xml
+++ b/ilona/src/main/webapp/WEB-INF/web.xml
@@ -10,8 +10,25 @@
 		<param-value>
 			/WEB-INF/applicationContext.xml
 			/WEB-INF/dispatcher-servlet.xml
+		<!--  	/WEB-INF/spring-security.xml -->
 		</param-value>
 	</context-param>
+
+	<!-- Spring Security -->
+	<!--
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>
+			org.springframework.web.filter.DelegatingFilterProxy
+		</filter-class>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/tracking/*</url-pattern>
+	</filter-mapping>
+    -->
+	<!-- End of Spring Security -->
 
 	<!-- Root context: applicationContext.xml -->
 	<listener>
@@ -27,5 +44,6 @@
 		<servlet-name>dispatcher</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+
 
 </web-app>
