--- a/tracking/tracking-model/pom.xml
+++ b/tracking/tracking-model/pom.xml
@@ -18,6 +18,7 @@
 		<junit.version>4.12</junit.version>
 		<spring.version>4.3.1.RELEASE</spring.version>
 		<spring.security.version>4.1.1.RELEASE</spring.security.version>
+		<measurement.model.version>0.1.1-SNAPSHOT</measurement.model.version>
 	</properties>
 	<dependencies>	
 
@@ -28,7 +29,12 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>uni.miskolc.ips.ilona</groupId>
+			<artifactId>measurement-model</artifactId>
+			<version>${measurement.model.version}</version>
+		</dependency>
 
 		<!-- Spring Dependencies -->
 		<!-- 
