--- a/tracking/tracking-persist/pom.xml
+++ b/tracking/tracking-persist/pom.xml
@@ -17,6 +17,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<junit.version>4.12</junit.version>
 		<tracking.model.version>0.0.1-SNAPSHOT</tracking.model.version>
+		<position.service.verison>0.1.3-SNAPSHOT</position.service.verison>
 	</properties>
 	<dependencies>
 		
@@ -33,6 +34,11 @@
 			<groupId>uni.miskolc.ips.ilona</groupId>
 			<artifactId>tracking-model</artifactId>
 			<version>${tracking.model.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>uni.miskolc.ips.ilona</groupId>
+			<artifactId>positioning-service-impl</artifactId>
+			<version>${position.service.verison}</version>
 		</dependency>
 	</dependencies>
 </project>
