--- a/tracking/tracking-service-impl/pom.xml
+++ b/tracking/tracking-service-impl/pom.xml
@@ -18,6 +18,7 @@
 		<junit.version>4.12</junit.version>
 		<tracking.service.version>0.0.1-SNAPSHOT</tracking.service.version>
 		<tracking.persist.version>0.0.1-SNAPSHOT</tracking.persist.version>
+		<position.service.verison>0.1.3-SNAPSHOT</position.service.verison>
 		<log4j.version>2.5</log4j.version>
 	</properties>
 	<dependencies>
@@ -52,6 +53,11 @@
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>uni.miskolc.ips.ilona</groupId>
+			<artifactId>positioning-service-impl</artifactId>
+			<version>${position.service.verison}</version>
 		</dependency>
 	</dependencies>
 </project>
