--- a/tracking/tracking-service/pom.xml
+++ b/tracking/tracking-service/pom.xml
@@ -17,6 +17,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<junit.version>4.12</junit.version>
 		<tracking.model.version>0.0.1-SNAPSHOT</tracking.model.version>
+		<tracking.measurement.version>0.1.1-SNAPSHOT</tracking.measurement.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -25,7 +26,7 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<!-- Ilona module dependencies -->
 		<dependency>
 			<groupId>uni.miskolc.ips.ilona</groupId>
@@ -35,7 +36,7 @@
 		<dependency>
 			<groupId>uni.miskolc.ips.ilona</groupId>
 			<artifactId>measurement-model</artifactId>
-			<version>0.1.1-SNAPSHOT</version>
+			<version>${tracking.measurement.version}</version>
 		</dependency>
 	</dependencies>
 </project>
