--- a/tracking/tracking-util/pom.xml
+++ b/tracking/tracking-util/pom.xml
@@ -16,8 +16,7 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<junit.version>4.12</junit.version>
-		<tracking.persist.version>0.0.1-SNAPSHOT</tracking.persist.version>
-		<tracking.service.version>0.0.1-SNAPSHOT</tracking.service.version>
+		<log4j.version>2.5</log4j.version>
 	</properties>
 	<dependencies>
 		<!-- Test dependencies -->
@@ -28,33 +27,21 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- Ilona modul dependencies -->
-		<!-- 
-		<dependency>
-			<groupId>uni.miskolc.ips.ilona</groupId>
-			<artifactId>tracking-service</artifactId>
-			<version>${tracking.service.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>uni.miskolc.ips.ilona</groupId>
-			<artifactId>tracking-persist</artifactId>
-			<version>${tracking.persist.version}</version>
-		</dependency>
-		 -->
+		<!-- Logging dependencies -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-api</artifactId>
-			<version>2.2</version>
+			<version>${log4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
-			<version>2.2</version>
+			<version>${log4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-iostreams</artifactId>
-			<version>2.2</version>
+			<version>${log4j.version}</version>
 		</dependency>
 	</dependencies>
 
