--- a/tracking/tracking-persist-mysql/pom.xml
+++ b/tracking/tracking-persist-mysql/pom.xml
@@ -22,6 +22,7 @@
 		<spring.version>4.3.1.RELEASE</spring.version>
 		<spring.security.version>4.1.1.RELEASE</spring.security.version>
 		<log4j.version>2.5</log4j.version>
+		<easymock.version>3.4</easymock.version>
 	</properties>
 	<dependencies>
 
@@ -30,6 +31,13 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>${easymock.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -88,4 +96,59 @@
 		</dependency>
 
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.4</version>
+				<configuration>
+					<excludes>
+						<exclude>**/*IntegrationTest.java</exclude>
+					</excludes>
+
+				</configuration>
+
+				<executions>
+					<execution>
+						<id>integration-test</id>
+						<goals>
+							<goal>test</goal>
+						</goals>
+						<phase>integration-test</phase>
+						<configuration>
+							<systemPropertyVariables>
+								<database.host>${database.host}</database.host>
+								<database.port>${database.port}</database.port>
+								<database.db>${database.db}</database.db>
+								<database.user>${database.user}</database.user>
+								<database.password>${database.password}</database.password>
+							</systemPropertyVariables>
+							<excludes>
+								<exclude>none</exclude>
+							</excludes>
+							<includes>
+								<include>**/*IntegrationTest.java</include>
+							</includes>
+						</configuration>
+					</execution>
+				</executions>
+
+			</plugin>
+		</plugins>
+	</build>
+
+	<profiles>
+		<profile>
+			<id>mysqlTemplate</id>
+			<properties>
+				<database.host>localhost</database.host>
+				<database.port>3306</database.port>
+				<database.db>Ilona</database.db>
+				<database.user>ilona</database.user>
+				<database.password>ilona</database.password>
+			</properties>
+		</profile>
+	</profiles>
 </project>
